--- a/src/app/features/reservations/components/list-reservations/list-reservations.component.html
+++ b/src/app/features/reservations/components/list-reservations/list-reservations.component.html
@@ -6,7 +6,7 @@
     <div class="flex justify-end gap-5">
 
       <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 " (click)="changeViewCalendar()">
-        {{changeView ? 'Ver calendario' : 'Ver tabla'}}
+        {{changeView ? 'Ver tabla' : 'Ver calendario'}}
 
       </button>
 
