--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -1,18 +1,17 @@
-<div *ngIf="dataSource.length > 0">
-  <div class="mb-4 flex space-x-4">
-    <div *ngFor="let column of dataSourceColumn" class="flex flex-col">
-      <label for="filter-{{ column.dataField }}" class="text-sm font-semibold">{{ column.caption }}</label>
-      <input
-        id="filter-{{ column.dataField }}"
-        type="text"
-        [(ngModel)]="column.filterValue"
-        (ngModelChange)="filterData()"
-        class="px-2 py-1 border border-gray-300 rounded"
-        placeholder="Filtrar {{ column.caption }}"
-      />
-    </div>
+<div class="mb-4 flex space-x-4" *ngIf="param === 'reservations'">
+  <div *ngFor="let column of dataSourceColumn" class="flex flex-col">
+    <label for="filter-{{ column.dataField }}" class="text-sm font-semibold">{{
+      column.caption }}</label>
+    <input id="filter-{{ column.dataField }}" type="text" [(ngModel)]="column.filterValue"
+      (ngModelChange)="filterData()" class="px-2 py-1 border border-gray-300 rounded"
+      placeholder="Filtrar {{ column.caption }}" />
   </div>
+  <button (click)="cleanFilter()" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600">
+    {{'Limpiar filtro'}}
+  </button>
+</div>
 
+<div *ngIf="dataSource.length > 0">
   <table class="min-w-full table-auto border-collapse border">
     <thead>
       <tr class="bg-gray-100">
@@ -23,12 +22,12 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let row of filteredDataSource" class="border-b hover:bg-gray-50">
+      <tr *ngFor="let row of dataSource" class="border-b hover:bg-gray-50">
         <td class="px-4 py-2" *ngFor="let column of dataSourceColumn">
           {{ row[column.dataField] }}
         </td>
         <td class="px-4 py-2 flex space-x-2">
-          <button (click)="deleteReservation(row.id!)" class="text-red-500 hover:text-red-700">
+          <button (click)="delete(row.id!)" class="text-red-500 hover:text-red-700">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
               stroke="currentColor" stroke-width="2">
               <path stroke-linecap="round" stroke-linejoin="round"
